# AdapParameter

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  graph.py  package.xml
doc/: Create a Client.md  Requirements Specification.md  Requirements_Specification.md  Technical Tidbits.md
package/: CMakeLists.txt
package/include/adap_parameter/: server.h
package/launch/: client.launch  server.launch  test_basic.launch  test_canny.launch  test_thresh.launch  test_v4l.launch
package/rqt_presets/: test_canny.perspective  test_thresh.perspective
package/src/clients/: basic.cpp  canny.cpp  synth_codependent.cpp  synth_multiple.cpp  synth_poly.cpp  synth_single.cpp  thresh.cpp  v4l.cpp
package/src/libadap/: libadap.cpp
package/src/server/: client.cpp  client.h  main.cpp  server.cpp  server.h  tuner.h  tuner_gradients.cpp  tuner_gradients.h
package/src/util/: cam_pub.cpp
src/client/: main.cpp
src/server/: client.cpp  client.h  main.cpp  server.cpp  server.h
srv/: Feedback.srv  Register.srv  Registration.srv  Tune.srv
