<package format="2">
  <name>adap_parameter</name>
  <version>0.0.1</version>
  <description>
  This packages provides a parameter server simmilar to dynamic_reconfigure
  that attempts to automatically tune the parameters with no user input.
  </description>
  <maintainer email="mitchpleune@gmail.com">Mitchell Pleune</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
